# mp

./: .env  .envrc  Dockerfile  README.md  pyproject.toml  run.sh
_data/: docker.db  newdocker.db  test.db
data/: test.db
marketplaats-bot/: .env  bot.py  db.py  discordbot  script.py  test.py  webhook.py
marketplaats-bot/migrations/: init.sql
